--- a/hello-spring-boot/src/main/resources/jdbc.properties
+++ b/hello-spring-boot/src/main/resources/jdbc.properties
@@ -1,6 +1,12 @@
 # MySQL 8.x: com.mysql.cj.jdbc.Driver
 # 为 generatorConfig.xml  配置
 jdbc.driverClass=com.mysql.cj.jdbc.Driver
-jdbc.connectionURL=jdbc:mysql://localhost:3306/yb?useUnicode=true&characterEncoding=UTF-8&serverTimezone=UTC
-jdbc.username=root
-jdbc.password=root
+jdbc.connectionURL=jdbc:mysql://10.128.10.113:3306/cppj?charset=utf8&autoReconnect=true&useSSL=false
+jdbc.username=cppj
+jdbc.password=cppj123%
+
+
+database.driverClassName=org.postgresql.Driver
+database.url=jdbc:postgresql://10.2.122.140:5432/compliance-uat
+database.username=postgres
+database.password=123456
